@@ -494,14 +494,14 @@ public class UiUtil {
    */
   public static JTextField makeUpperCase(final JTextField textField) {
     ((PlainDocument) textField.getDocument()).setDocumentFilter(new DocumentFilter() {
-      public void insertString(FilterBypass fb, int offset, String string, AttributeSet attr) throws BadLocationException {
-        super.insertString(fb, offset, string.toUpperCase(), attr);
+      public void insertString(FilterBypass fb, int offset, String text, AttributeSet attr) throws BadLocationException {
+        super.insertString(fb, offset, text == null ? text : text.toUpperCase(), attr);
       }
       public void remove(FilterBypass fb, int offset, int length) throws BadLocationException {
         super.remove(fb, offset, length);
       }
       public void replace(FilterBypass fb, int offset, int length, String text, AttributeSet attrs) throws BadLocationException {
-        super.replace(fb, offset, length, text.toUpperCase(), attrs);
+        super.replace(fb, offset, length, text == null ? text : text.toUpperCase(), attrs);
       }
     });
 
